# unex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.h
example/: CMakeLists.txt  main.cpp
include/: unex.h
include/core/: array.h  basic_definitions.h  heap_array.h  log.h  math.h  memory.h  stack_array.h  types.h
include/cpp/: heap_array.h  math.h  memory.h  stack_array.h  string.h  types.h
src/core/: array.c  log.c  memory.c
